Jdk 10 has reached eol, transition to jdk11 where jfx is no longer included