@@ -30,8 +30,36 @@ sourceSets {
 
 dependencies {
     def final junitVersion = "5.3.1"
+    def final openjfxVersion = "11.0.1"
+    def final platform = "linux"
     testImplementation 'org.junit.jupiter:junit-jupiter-api:' + junitVersion
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:' + junitVersion
+    compile 'org.openjfx:javafx-base:' + openjfxVersion + ':' + platform
+    compile 'org.openjfx:javafx-graphics:' + openjfxVersion + ':' + platform
+    compile 'org.openjfx:javafx-controls:' + openjfxVersion + ':' + platform
+    compile 'org.openjfx:javafx-fxml:' + openjfxVersion + ':' + platform
+}
+
+compileJava {
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls',
+                '--add-modules', 'javafx.graphics',
+                '--add-modules', 'javafx.base'
+        ]
+    }
+}
+
+run {
+    doFirst {
+        jvmArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls',
+                '--add-modules', 'javafx.graphics',
+                '--add-modules', 'javafx.base'
+        ]
+    }
 }
 
 test {
@@ -68,6 +96,10 @@ jar {
     version = '0.1.0'
 }
 
+jacoco {
+    toolVersion = "0.8.2"
+}
+
 jacocoTestReport {
     reports {
         xml.enabled = true
@@ -78,5 +110,5 @@ jacocoTestReport {
 check.dependsOn jacocoTestReport
 
 mainClassName = 'ui.SolverApp'
-sourceCompatibility = 10
-targetCompatibility = 10
+sourceCompatibility = 11
+targetCompatibility = 11
